--- a/examples/user_guide/Selecting_Genes_with_Boruta.ipynb
+++ b/examples/user_guide/Selecting_Genes_with_Boruta.ipynb
@@ -1720,7 +1720,7 @@
     "boruta_result = gsf.operations.boruta_prospector(\n",
     "    agem, \n",
     "    estimator=selecting_model, \n",
-    "    selected_annotation_variables=\"Genotype\",\n",
+    "    annotation_variables=\"Genotype\",\n",
     "    max_iter=5,\n",
     "    perc=100)"
    ]
@@ -1902,6 +1902,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
