--- a/examples/user_guide/Selecting_Genes_with_Boruta.ipynb
+++ b/examples/user_guide/Selecting_Genes_with_Boruta.ipynb
@@ -551,7 +551,20 @@
       "text/html": [
        "\n",
        "<link rel=\"stylesheet\" href=\"https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css\">\n",
-       "<style>div.hololayout {\n",
+       "<style>div.bk-hbox {\n",
+       "    display: flex;\n",
+       "    justify-content: center;\n",
+       "}\n",
+       "\n",
+       "div.bk-hbox div.bk-plot {\n",
+       "    padding: 8px;\n",
+       "}\n",
+       "\n",
+       "div.bk-hbox div.bk-data-table {\n",
+       "    padding: 20px;\n",
+       "}\n",
+       "\n",
+       "div.hololayout {\n",
        "  display: flex;\n",
        "  align-items: center;\n",
        "  margin: 0;\n",
@@ -643,19 +656,6 @@
        ".noUi-target {\n",
        "  margin-left: 0.5em;\n",
        "  margin-right: 0.5em;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox {\n",
-       "    display: flex;\n",
-       "    justify-content: center;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox div.bk-plot {\n",
-       "    padding: 8px;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox div.bk-data-table {\n",
-       "    padding: 20px;\n",
        "}\n",
        "</style>\n",
        "\n",
@@ -1600,6 +1600,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***Loading a demo AnnotatedGEM***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "16-Dec-2019 14:55:55 DEBUG utils - Directory ./ already exists. Skipping.\n",
+      "16-Dec-2019 14:55:55 INFO GEOparse - File already exist: using local version.\n",
+      "16-Dec-2019 14:55:55 INFO GEOparse - Parsing ./GDS2910.soft.gz: \n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - DATABASE: Geo\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - DATASET: GDS2910\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_1\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_2\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_3\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_4\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_5\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_6\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_7\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_8\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_9\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_10\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_11\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_12\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_13\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_14\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_15\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_16\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_17\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_18\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_19\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_20\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - SUBSET: GDS2910_21\n",
+      "16-Dec-2019 14:55:55 DEBUG GEOparse - DATASET: GDS2910\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds = gsf.utils.ncbi_geo.build_geo_xarray(\"GDS2910\")\n",
+    "agem = gsf.AnnotatedGEM(ds, name=\"GDS2910\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.Dataset>\n",
+       "Dimensions:      (Gene: 13056, Sample: 191)\n",
+       "Coordinates:\n",
+       "  * Sample       (Sample) object 'GSM76723' 'GSM76724' ... 'GSM76804' 'GSM76805'\n",
+       "  * Gene         (Gene) int64 1 2 3 4 5 6 ... 13052 13053 13054 13055 13056\n",
+       "Data variables:\n",
+       "    description  (Sample) object 'Value for GSM76723: S. cerevisiae Heat shock (37oC) 10 minutes; src: S. cerevisiae Heat shock (37oC) 10 minutes; src: S. cerevisiae grown in YPD at 30oC' ... 'Value for GSM76805: S. kudriavzevii, transfer from glucose to glycerol, 90 minutes; src: S. kudriavzevii, transfer from glucose to glycerol, 90 minutes; src: S. kudriavzevii grown in YPD at 24oC'\n",
+       "    species      (Sample) object 'S. cerevisiae' ... 'S. kudriavzevii'\n",
+       "    strain       (Sample) object '1' '1' '1' '1' '1' '1' ... '1' '1' '1' '1' '1'\n",
+       "    stress       (Sample) object 'heat shock' ... 'growth on glycerol'\n",
+       "    time         (Sample) object '10 min' '20 min' ... '65 min' '90 min'\n",
+       "    counts       (Sample, Gene) float64 -0.7396 -0.04819 -0.9508 ... nan nan nan\n",
+       "Attributes:\n",
+       "    title:                     ['Interspecies variations in response to envir...\n",
+       "    description:               ['Analysis of four closely related yeast speci...\n",
+       "    type:                      ['Expression profiling by array']\n",
+       "    pubmed_id:                 ['16783381']\n",
+       "    platform:                  ['GPL2910']\n",
+       "    platform_organism:         ['Saccharomyces cerevisiae']\n",
+       "    platform_technology_type:  ['spotted DNA/cDNA']\n",
+       "    feature_count:             ['13056']\n",
+       "    sample_organism:           ['Saccharomyces cerevisiae', 'Saccharomyces pa...\n",
+       "    sample_type:               ['RNA']\n",
+       "    channel_count:             ['2']\n",
+       "    sample_count:              ['191']\n",
+       "    value_type:                ['log2 ratio']\n",
+       "    reference_series:          ['GSE3406']\n",
+       "    order:                     ['none']\n",
+       "    update_date:               ['Sep 15 2009']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agem.data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "***Declaring paths used***\n",
     "\n",
     "For convenience the paths used in this notebook are declared here:"
@@ -1607,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -1615,7 +1714,7 @@
    },
    "outputs": [],
    "source": [
-    "ANNOTATED_GEM_PATH = \"~/GEMprospector_demo_data/osativa.nc\""
+    "# ANNOTATED_GEM_PATH = \"~/GEMprospector_demo_data/osativa.nc\""
    ]
   },
   {
@@ -1627,25 +1726,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 94.6 ms, sys: 13.5 ms, total: 108 ms\n",
-      "Wall time: 143 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%time\n",
-    "agem = gsf.AnnotatedGEM(ANNOTATED_GEM_PATH, name=\"Oryza sativa\")"
+    "# %%time\n",
+    "# agem = gsf.AnnotatedGEM(ANNOTATED_GEM_PATH, name=\"Oryza sativa\")"
    ]
   },
   {
@@ -1662,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -1675,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -1699,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -1710,8 +1800,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 22.4 s, sys: 30.6 s, total: 53 s\n",
-      "Wall time: 39.2 s\n"
+      "CPU times: user 1min 43s, sys: 6.5 s, total: 1min 50s\n",
+      "Wall time: 43.5 s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
+      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n"
      ]
     }
    ],
@@ -1720,8 +1818,8 @@
     "boruta_result = gsf.operations.boruta_prospector(\n",
     "    agem, \n",
     "    estimator=selecting_model, \n",
-    "    annotation_variables=\"Genotype\",\n",
-    "    max_iter=2,\n",
+    "    annotation_variables=\"species\",\n",
+    "    max_iter=10,\n",
     "    perc=100)"
    ]
   },
@@ -1734,7 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -1745,21 +1843,21 @@
      "data": {
       "text/plain": [
        "<xarray.Dataset>\n",
-       "Dimensions:       (Gene: 55986)\n",
+       "Dimensions:       (Gene: 13056)\n",
        "Coordinates:\n",
-       "  * Gene          (Gene) object 'LOC_Os06g05820' ... 'LOC_Os07g03418'\n",
+       "  * Gene          (Gene) int64 1 2 3 4 5 6 ... 13052 13053 13054 13055 13056\n",
        "Data variables:\n",
        "    support       (Gene) bool False False False False ... False False False\n",
        "    support_weak  (Gene) bool False False False False ... False False False\n",
-       "    ranking       (Gene) int64 27956 27956 27956 27956 ... 27956 27956 27956\n",
+       "    ranking       (Gene) int64 10957 8034 8034 8034 ... 10957 10957 10957 10957\n",
        "Attributes:\n",
-       "    boruta_model:                   {\"random_state\": null, \"two_step\": true, ...\n",
+       "    boruta_model:                   {\"random_state\": null, \"alpha\": 0.05, \"n_...\n",
        "    ranking_model:                  {\"bootstrap\": true, \"class_weight\": \"bala...\n",
        "    selected_count_variable:        counts\n",
-       "    selected_annotation_variables:  Genotype"
+       "    selected_annotation_variables:  species"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1793,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1801,10 +1899,10 @@
       "text/plain": [
        "<GEMprospector.GeneSet>\n",
        "Name: Boruta Genotype\n",
-       "    Supported Genes:  0, 0.00% of 55986"
+       "    Supported Genes:  176, 1.35% of 13056"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
