--- a/examples/user_guide/AnnotatedGEM_from_NCBI_GEO.ipynb
+++ b/examples/user_guide/AnnotatedGEM_from_NCBI_GEO.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import GEMprospector as gsf"
+    "import GSForge as gsf"
    ]
   },
   {
@@ -2640,6 +2640,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
