--- a/examples/user_guide/Selecting_Genes_with_Boruta.ipynb
+++ b/examples/user_guide/Selecting_Genes_with_Boruta.ipynb
@@ -551,20 +551,7 @@
       "text/html": [
        "\n",
        "<link rel=\"stylesheet\" href=\"https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css\">\n",
-       "<style>div.bk-hbox {\n",
-       "    display: flex;\n",
-       "    justify-content: center;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox div.bk-plot {\n",
-       "    padding: 8px;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox div.bk-data-table {\n",
-       "    padding: 20px;\n",
-       "}\n",
-       "\n",
-       "div.hololayout {\n",
+       "<style>div.hololayout {\n",
        "  display: flex;\n",
        "  align-items: center;\n",
        "  margin: 0;\n",
@@ -656,6 +643,19 @@
        ".noUi-target {\n",
        "  margin-left: 0.5em;\n",
        "  margin-right: 0.5em;\n",
+       "}\n",
+       "\n",
+       "div.bk-hbox {\n",
+       "    display: flex;\n",
+       "    justify-content: center;\n",
+       "}\n",
+       "\n",
+       "div.bk-hbox div.bk-plot {\n",
+       "    padding: 8px;\n",
+       "}\n",
+       "\n",
+       "div.bk-hbox div.bk-data-table {\n",
+       "    padding: 20px;\n",
        "}\n",
        "</style>\n",
        "\n",
@@ -1585,6 +1585,7 @@
     }
    ],
    "source": [
+    "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import xarray as xr\n",
@@ -1600,65 +1601,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Loading a demo AnnotatedGEM***"
+    "***Declaring paths used***\n",
+    "\n",
+    "For convenience the paths used in this notebook are declared here:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "17-Dec-2019 11:58:19 DEBUG utils - Directory ./ already exists. Skipping.\n",
-      "17-Dec-2019 11:58:19 INFO GEOparse - Downloading ftp://ftp.ncbi.nlm.nih.gov/geo/datasets/GDS2nnn/GDS2910/soft/GDS2910.soft.gz to ./GDS2910.soft.gz\n",
-      "17-Dec-2019 11:58:19 INFO utils - Downloading ftp://ftp.ncbi.nlm.nih.gov/geo/datasets/GDS2nnn/GDS2910/soft/GDS2910.soft.gz to ./GDS2910.soft.gz\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "D: 100% -  8.6MiB  /  8.6MiB  eta 0:00:01\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "17-Dec-2019 11:58:23 INFO GEOparse - Parsing ./GDS2910.soft.gz: \n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - DATABASE: Geo\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - DATASET: GDS2910\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_1\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_2\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_3\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_4\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_5\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_6\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_7\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_8\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_9\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_10\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_11\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_12\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_13\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_14\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_15\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_16\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_17\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_18\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_19\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_20\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - SUBSET: GDS2910_21\n",
-      "17-Dec-2019 11:58:23 DEBUG GEOparse - DATASET: GDS2910\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ds = gsf.utils.ncbi_geo.build_geo_xarray(\"GDS2910\")\n",
-    "agem = gsf.AnnotatedGEM(ds, name=\"GDS2910\")"
+    "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data/\")\n",
+    "GDS2910_gem_path = demo_dir + \"GDS2910.nc\"\n",
+    "GDS2910_boruta_result_path = demo_dir + \"boruta_results\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Loading a demo AnnotatedGEM***"
    ]
   },
   {
@@ -1669,35 +1632,11 @@
     {
      "data": {
       "text/plain": [
-       "<xarray.Dataset>\n",
-       "Dimensions:      (Gene: 13056, Sample: 191)\n",
-       "Coordinates:\n",
-       "  * Sample       (Sample) object 'GSM76723' 'GSM76724' ... 'GSM76804' 'GSM76805'\n",
-       "  * Gene         (Gene) int64 1 2 3 4 5 6 ... 13052 13053 13054 13055 13056\n",
-       "Data variables:\n",
-       "    description  (Sample) object 'Value for GSM76723: S. cerevisiae Heat shock (37oC) 10 minutes; src: S. cerevisiae Heat shock (37oC) 10 minutes; src: S. cerevisiae grown in YPD at 30oC' ... 'Value for GSM76805: S. kudriavzevii, transfer from glucose to glycerol, 90 minutes; src: S. kudriavzevii, transfer from glucose to glycerol, 90 minutes; src: S. kudriavzevii grown in YPD at 24oC'\n",
-       "    species      (Sample) object 'S. cerevisiae' ... 'S. kudriavzevii'\n",
-       "    strain       (Sample) object '1' '1' '1' '1' '1' '1' ... '1' '1' '1' '1' '1'\n",
-       "    stress       (Sample) object 'heat shock' ... 'growth on glycerol'\n",
-       "    time         (Sample) object '10 min' '20 min' ... '65 min' '90 min'\n",
-       "    counts       (Sample, Gene) float64 -0.7396 -0.04819 -0.9508 ... nan nan nan\n",
-       "Attributes:\n",
-       "    title:                     ['Interspecies variations in response to envir...\n",
-       "    description:               ['Analysis of four closely related yeast speci...\n",
-       "    type:                      ['Expression profiling by array']\n",
-       "    pubmed_id:                 ['16783381']\n",
-       "    platform:                  ['GPL2910']\n",
-       "    platform_organism:         ['Saccharomyces cerevisiae']\n",
-       "    platform_technology_type:  ['spotted DNA/cDNA']\n",
-       "    feature_count:             ['13056']\n",
-       "    sample_organism:           ['Saccharomyces cerevisiae', 'Saccharomyces pa...\n",
-       "    sample_type:               ['RNA']\n",
-       "    channel_count:             ['2']\n",
-       "    sample_count:              ['191']\n",
-       "    value_type:                ['log2 ratio']\n",
-       "    reference_series:          ['GSE3406']\n",
-       "    order:                     ['none']\n",
-       "    update_date:               ['Sep 15 2009']"
+       "<GSForge.AnnotatedGEM>\n",
+       "Name: GDS2910\n",
+       "Selected GEM Variable: 'counts'\n",
+       "    Gene   13056\n",
+       "    Sample 191"
       ]
      },
      "execution_count": 3,
@@ -1706,50 +1645,59 @@
     }
    ],
    "source": [
-    "agem.data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***Declaring paths used***\n",
-    "\n",
-    "For convenience the paths used in this notebook are declared here:"
+    "agem = gsf.AnnotatedGEM(GDS2910_gem_path)\n",
+    "agem"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# ANNOTATED_GEM_PATH = \"~/GEMprospector_demo_data/osativa.nc\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "***Loading an AnnotatedGEM***"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.Dataset>\n",
+       "Dimensions:      (Gene: 13056, Sample: 191)\n",
+       "Coordinates:\n",
+       "  * Sample       (Sample) object 'GSM76723' 'GSM76724' ... 'GSM76804' 'GSM76805'\n",
+       "  * Gene         (Gene) object 'Gene_1' 'Gene_2' ... 'Gene_13055' 'Gene_13056'\n",
+       "    quantile     float64 ...\n",
+       "Data variables:\n",
+       "    description  (Sample) object ...\n",
+       "    species      (Sample) object ...\n",
+       "    strain       (Sample) object ...\n",
+       "    stress       (Sample) object ...\n",
+       "    time         (Sample) object ...\n",
+       "    counts       (Sample, Gene) float64 ...\n",
+       "    uq_counts    (Sample, Gene) float64 ...\n",
+       "Attributes:\n",
+       "    title:                          Interspecies variations in response to en...\n",
+       "    description:                    Analysis of four closely related yeast sp...\n",
+       "    type:                           Expression profiling by array\n",
+       "    pubmed_id:                      16783381\n",
+       "    platform:                       GPL2910\n",
+       "    platform_organism:              Saccharomyces cerevisiae\n",
+       "    platform_technology_type:       spotted DNA/cDNA\n",
+       "    feature_count:                  13056\n",
+       "    sample_organism:                ['Saccharomyces cerevisiae', 'Saccharomyc...\n",
+       "    sample_type:                    RNA\n",
+       "    channel_count:                  2\n",
+       "    sample_count:                   191\n",
+       "    value_type:                     log2 ratio\n",
+       "    reference_series:               GSE3406\n",
+       "    order:                          none\n",
+       "    update_date:                    Sep 15 2009\n",
+       "    __GSForge.AnnotatedGEM.params:  {\"count_array_name\": \"counts\", \"gene_inde..."
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "# %%time\n",
-    "# agem = gsf.AnnotatedGEM(ANNOTATED_GEM_PATH, name=\"Oryza sativa\")"
+    "agem.data"
    ]
   },
   {
@@ -1766,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -1779,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -1803,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -1814,8 +1762,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 12 s, sys: 797 ms, total: 12.8 s\n",
-      "Wall time: 4.77 s\n"
+      "CPU times: user 12.1 s, sys: 1.05 s, total: 13.2 s\n",
+      "Wall time: 5.55 s\n"
      ]
     }
    ],
@@ -1838,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -1851,19 +1799,19 @@
        "<xarray.Dataset>\n",
        "Dimensions:       (Gene: 13056)\n",
        "Coordinates:\n",
-       "  * Gene          (Gene) int64 1 2 3 4 5 6 ... 13052 13053 13054 13055 13056\n",
+       "  * Gene          (Gene) object 'Gene_1' 'Gene_2' ... 'Gene_13055' 'Gene_13056'\n",
        "Data variables:\n",
        "    support       (Gene) bool False False False False ... False False False\n",
        "    support_weak  (Gene) bool False False False False ... False False False\n",
-       "    ranking       (Gene) int64 8178 3211 8178 8178 216 ... 8178 8178 8178 8178\n",
+       "    ranking       (Gene) int64 8078 8078 8078 8078 8078 ... 8078 8078 8078 8078\n",
        "Attributes:\n",
-       "    boruta_model:                   {\"two_step\": true, \"alpha\": 0.05, \"verbos...\n",
+       "    boruta_model:                   {\"random_state\": null, \"perc\": 100, \"verb...\n",
        "    ranking_model:                  {\"bootstrap\": true, \"class_weight\": \"bala...\n",
        "    selected_count_variable:        counts\n",
        "    selected_annotation_variables:  species"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1897,18 +1845,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<GEMprospector.GeneSet>\n",
+       "<GSForge.GeneSet>\n",
        "Name: Boruta Genotype\n",
        "    Supported Genes:  0, 0.00% of 13056"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1929,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1958,13 +1906,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0bb1186afb93426495ad6237fe7db153",
+       "model_id": "dfc2c8db29ba40dcb78a768d6347ce40",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2175,25 +2123,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<GEMprospector.GeneSetCollection>\n",
-       "GeneSetCollection01325\n",
-       "    <GEMprospector.AnnotatedGEM>\n",
+       "<GSForge.GeneSetCollection>\n",
+       "GeneSetCollection01324\n",
+       "    <GSForge.AnnotatedGEM>\n",
        "    Name: GDS2910\n",
        "    Selected GEM Variable: 'counts'\n",
        "        Gene   13056\n",
        "        Sample 191\n",
        "GeneSet Keys and # of Selected Genes\n",
-       "    stress: 768\n",
-       "    species: 590"
+       "    stress: 754\n",
+       "    species: 564"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2211,19 +2159,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "boruta_gsc.save(\"boruta_results\")"
+    "boruta_gsc.save(GDS2910_boruta_result_path)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
